syntax = "proto3";

// Don't know that's for???
// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";
// option objc_class_prefix = "HLW";

// Exposed name when using loadPackageDefinition
package acts;

// The ActManagement service definition
service ActsManagement {
  rpc CreateSurgeryAct (SurgeryActRequest) returns (ActReply) {}
  rpc CreateOrderAct (OrderActRequest) returns (ActReply) {}
  rpc CreateOphthalmologistAct (OphthalmologistActRequest) returns (ActReply) {}
}

message SurgeryActRequest {
  string bodyPart = 1;
}

message OrderActRequest {
  bool isRenewable = 1;
}

message OphthalmologistActRequest {
  bool isFirst = 1;
}

message ActReply {
  bool isOk = 1;
  string error = 2;
}